package com.tracer.model.request;

import lombok.*;

import java.math.BigDecimal;

@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@ToString
public class AddStudentRequest {
    private String name;
    private Integer period;
    private BigDecimal grade;
}
