package com.tracer.model.request.student;

import lombok.*;

@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@ToString
public class GetStudentRequest {
    private String studentName;
}
